# Kaeli-compiler

./: .gitignore  CMakeLists.txt  KaeliLexer.g4  KaeliParser.g4  compile.sh  file.ae  run.sh  test_vars.ae
src/: main.cpp
src/lib/: KaeliLexer.cpp  KaeliLexer.h  KaeliLexer.interp  KaeliParser.cpp  KaeliParser.h  KaeliParser.interp  KaeliParser.tokens  KaeliParserBaseVisitor.cpp  KaeliParserBaseVisitor.h  KaeliParserVisitor.cpp  KaeliParserVisitor.h
src/myVisitor/: KCVisitor.cpp  KCVisitor.h
src/stdlib/: buildin.cpp
